recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:23: error: not found: value y
      return tree(x,y,angle,shrink)
                    ^